# BaklavaShell

./: .gitignore  .goreleaser.yaml  AGENTS.md  CMakeLists.txt  README.md  config.lua  install.sh  zen.cpp
.github/workflows/: release.yml
cmake/: FindLua.cmake
cmd/bsh/: main.go  main_test.go
docs/: index.mdx
docs/architecture/: index.mdx
docs/configuration/: index.mdx
docs/faq/: index.mdx
docs/getting-started/: index.mdx
docs/plugins/: index.mdx
docs/plugins/built-in/: index.mdx
docs/plugins/built-in/autosuggest/: index.mdx
docs/plugins/development/: index.mdx
docs/theming/: index.mdx
include/: shell.hpp  theme.hpp
internal/config/: config.go  config_test.go
internal/data/: format.go  table.go  value.go
internal/plugins/: plugins.go  plugins_test.go
internal/prompt/: prompt.go
internal/shell/: completer.go  pipeline.go  pipeline_test.go  script.go  shell.go  tokenize.go
obj-x86_64-linux-gnu/: install_manifest.txt
plugins/: autosuggest.lua  command-timer.lua  ghost-prompt.lua  git-prompt.lua  jump.lua  node-version.lua  powerlevel10k.lua  proxy.lua  quote.lua  syntax-highlighting.lua  todo.lua  venv-prompt.lua
src/: main.cpp  shell.cpp  theme.cpp
